Fix header, global color variables (must be light/dark mode), Cart/CartButton

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -17,7 +19,15 @@ body {
         'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #ecfdf5;
+    background-color: #333333;
+
+    --bg-header: #fff;
+    --color: #212121;
+}
+
+body.dark {
+    --bg-header: #212121;
+    --color: #fff;
 }
 
 code {
